# AirMail

./: .gitignore  Dockerfile  README.md  cli.py  config.py  docker-compose.yml  docker-compose.yml.local  main.py  pyproject.toml  requirements.txt  setup.sh
app/: consumer.py  manager.py  schemas.py
app/core/: __init__.py  config.py  manager.py
app/core/services/: emails.py
app/db/: __init__.py  models.py  session.py
app/monitoring/: __init__.py  zabbix_api.py
app/rabbit/: __init__.py  base.py  consumer.py
app/schemas/: __init__.py  notifications.py
app/services/: __init__.py  emails.py
