[tool.poetry]
name = "notify"
version = "0.1.0"
description = ""
authors = ["Boyarskiy Ilya <boyailya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.47"
pydantic = "^2.12.5"
pika = "^1.3.2"
pydantic-settings = "^2.13.1"
zabbix-utils = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
